Pass native flag to the launcher in tests
This needs a proper fix later, but for now this allows tests to pass.